--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body, html {
   width: 100%;
   height: 100%;
   background: transparent;
-  color: inherit;
+   color: #2d3a4b;
   z-index: 2;
   resize: none;
   margin: 0;
